--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -48,7 +48,7 @@ header {
 	top: 0px;
 	z-index: 10;
 	overflow: hidden;
-	height: 9rem;
+	height: 9.1rem;
 	margin-bottom: 0;
 }
 
@@ -74,23 +74,23 @@ header {
 	margin-left: auto;
   }
 
-  @media (min-width: 768px) {
-	.container {
-	  width: 750px;
-	}
-  }
+//   @media (min-width: 768px) {
+// 	.container {
+// 	  width: 750px;
+// 	}
+//   }
 
-  @media (min-width: 992px) {
-	.container {
-	  width: 970px;
-	}
-  }
+//   @media (min-width: 992px) {
+// 	.container {
+// 	  width: 970px;
+// 	}
+//   }
 
-  @media (min-width: 1200px) {
-	.container {
-	  width: 1170px;
-	}
-  }
+//   @media (min-width: 1200px) {
+// 	.container {
+// 	  width: 1170px;
+// 	}
+//   }
   
 
 .menu-toggle {
@@ -306,7 +306,7 @@ nav ul li a.down::after {
 
 		p {
 			margin-top: -3rem; // this line is the difference between the two.
-			font-size: large;
+			font-size: x-large;
 		}
 	}
 
@@ -410,7 +410,7 @@ nav ul li a.active::after {
 					position: relative;
 					// margin: 5rem 5%;
 					padding-top: 4rem;
-					height: 90%;
+					height: 87%;
 					// width: 100%;
 					max-width: 95%;
 					margin: 0 auto;
@@ -449,6 +449,14 @@ nav ul li a.active::after {
 	}
 }
 
+.half {
+	position: relative;
+	max-height: 50%;
+}
+
+.double {
+	background: transparent;
+}
 
 .hero {
 	position: relative;
@@ -463,7 +471,7 @@ nav ul li a.active::after {
 	padding-top: 1rem;
 }
 
-.bg-code {
+.bg-warm {
 	background: url('./assets/code-small.jpg') center;
 	// background-attachment: cover;
 	width: 100%;
@@ -471,11 +479,21 @@ nav ul li a.active::after {
  	 
 }
 
-.bg-pitt {
-	background: url('./assets/pitt-small.jpg') center;
+.bg-cool {
+	background: url('./assets/code-cool-small.jpg') center;
 	// background-attachment: cover;
 	width: 100%;
 	background-size: cover;
+}
+
+.bg-tall-cool {
+	background: url('./assets/code-col-cool-small.jpg') center;
+	width: 100%;
+	background-size: cover;
+}
+
+.bg-tall-warm {
+	background: url('./assets/code-col-small.jpg');
 }
 
 .text {
@@ -676,6 +694,7 @@ nav ul li a.active::after {
 			width: 100%;
 			.wrap {
 				background-color: transparent;
+				// margin-top: -1rem;
 				section {
 					min-height: 100vh;
 					z-index: 998;
