--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -19,6 +19,7 @@ $secondary: $dark-red;
 	background-color: $dark-red;
 	display: flex;
 	flex-direction: column;
+	overflow-x: clip;
 	// div:last-child {
 	// 	opacity: .99;
 	//   }
@@ -44,6 +45,7 @@ header {
 	// background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.5)), center no-repeat;
 	background-size: cover;
 	// position: relative;
+	height: 100vh;
 	position: sticky;
 	top: 0px;
 	z-index: 10;
@@ -232,6 +234,7 @@ nav ul li a.down::after {
 	margin: unset;
 	padding: 1rem;
 	background: $lt-grey;
+	background: linear-gradient($lt-grey, $new-grey);
 	border-radius: 1.25rem;
 	min-height: 20rem;
 	height: 100%;
@@ -609,10 +612,10 @@ nav ul li a.active::after {
 
 @media screen and (max-width: 1000px) {
 	header {
-		height: 100vh;
+		// height: 100vh;
 		z-index: 10000;
 		display: flex;
-		margin-bottom: -500px;
+		// margin-bottom: -500px;
 		background: transparent;
 	}
 
@@ -673,7 +676,7 @@ nav ul li a.active::after {
 
 	.brand {
 		width: 100%;
-		margin-top: 3rem;
+		// margin-top: 3rem;
 		padding: 0 1rem;
 		position: relative;
 		z-index: 9996;
@@ -708,7 +711,7 @@ nav ul li a.active::after {
 		//   justify-content: space-evenly;
 		.brand {
 			width: 100%;
-			margin-top: 3rem;
+			// margin-top: 3rem;
 			position: relative;
 			z-index: 9996;
 
@@ -748,16 +751,12 @@ nav ul li a.active::after {
 							z-index: 1000;
 							// background-color: rgba(0,0,0,.7);
 							margin: 0 2rem;
-
+							padding-left: unset;
+							padding-right: unset;
 							p {
+								padding-top: 0.5rem;
 								// text-align: center;
-								display: none;
-							}
-
-							div {
-								// margin-top: 6rem;
-								background: transparent;
-								// padding: 5%;
+								// display: none;
 							}
 						}
 					}
@@ -870,7 +869,7 @@ nav ul li a.active::after {
 /* Knockout text within a dark area */
 .multiply {
 	color: white;
-	mix-blend-mode: multiply;
+	mix-blend-mode: difference;
 	background-color: rgb(47, 47, 47);
   }
   
@@ -881,10 +880,16 @@ nav ul li a.active::after {
 	background-color:rgb(47, 47, 47);
   }
 
-  .darken {
+  .exclusion {
 	color: white;
-	mix-blend-mode: darken;
+	mix-blend-mode: exclusion;
 	background-color:  rgb(47, 47, 47);
+  }
+
+  .multiply {
+	color: white;
+	mix-blend-mode: exclusion;
+	background-color: rgb(47,47,47);
   }
 
   .lighten {
