--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -374,6 +374,15 @@ nav ul li a.active::after {
 	background: transparent;
 }
 
+.carousel-item {
+	margin-top: 8rem;
+	background-color: rgb(32, 32, 32);
+background-image: linear-gradient(to right, rgba(0,0,0,1), rgba(0,0,0,0) 20%, rgba(0,0,0,0) 80%, rgba(0,0,0,1)), linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black), linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black), linear-gradient(to bottom, rgb(8, 8, 8), rgb(32, 32, 32));
+background-size: 100% 100%, 10px 10px, 10px 10px, 10px 5px;
+background-position: 0px 0px, 0px 0px, 5px 5px, 0px 0px;
+border-radius: 2rem;
+}
+
 
 #root {
 
@@ -602,6 +611,10 @@ nav ul li a.active::after {
 
 blockquote {
 	height: 100%;
+	p {
+		height: 60%;
+		color: #eee;
+	}
 }
 
 // margin: 3rem 3rem 6rem 3rem;
@@ -737,6 +750,8 @@ blockquote {
 			width: 100%;
 		}
 	}
+
+	
 
 
 	.overlay.menu-open,
